# postgress-rs

./: Cargo.toml  IMPLEMENTATION_PLAN.md  POSTGRESQL_COMPATIBILITY_PLAN.md  README.md  ROADMAP.md
benches/: e2e_bench.rs  executor_bench.rs  parser_bench.rs  storage_bench.rs  wal_bench.rs
benches/common/: mod.rs  postgres.rs
benchmarks/: pg_compare.rs
src/: error.rs  lib.rs  main.rs  server.rs  server_tests.rs
src/btree/: brin_index.rs  gin_index.rs  gist_index.rs  hash_index.rs  insert.rs  mod.rs  page.rs  scan.rs  search.rs
src/buffer_cache/: mod.rs
src/catalog/: mod.rs  statistics.rs
src/concurrency/: autovacuum.rs  condition_variable.rs  latch.rs  mod.rs
src/executor/: btree.rs  heap.rs  heap_tests.rs  mod.rs  planner.rs  select.rs  select_tests.rs
src/executor/parallel/: mod.rs  worker.rs
src/executor/partition/: mod.rs  pruning.rs
src/protocol/: auth.rs  backend.rs  codes.rs  connection_pool.rs  copy.rs  cursor.rs  extended.rs  frontend.rs  listen_notify.rs  mod.rs  parser.rs
src/security/: auditing.rs  mod.rs  rbac.rs  rls.rs
src/server/: eval.rs  query.rs  utils.rs
src/sql/: ast.rs  function.rs  mod.rs  parser.rs
src/storage/: ephemeral.rs  fork.rs  heap_page.rs  mmap.rs  mod.rs  toast.rs  visibility_map.rs
src/suiteshell/: mod.rs
src/transaction/: clog.rs  locks.rs  mod.rs  timeouts.rs
src/types/: jsonb.rs  mod.rs  tsquery.rs  tsvector.rs
src/wal/: archiving.rs  mod.rs  recovery.rs
tests/: catalog_test.rs  executor_test.rs  heap_test.rs  integration_test.rs  protocol_test.rs  storage_test.rs  wal_test.rs
(+20 files in other folders)
