[package]
name = "postgress-rs"
version = "0.1.0"
edition = "2021"
description = "A PostgreSQL alternative implemented in Rust for educational purposes"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
parking_lot = "0.12"
memmap2 = "0.9"
fs2 = "0.4"
bincode = "1.3"

[dev-dependencies]
tempfile = "3"
